<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2026 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="start_favorite_scenarios"
        android:enabled="true"
        android:icon="@mipmap/ic_smart_auto_clicker"
        android:shortcutShortLabel="@string/shortcut_favorite_scenarios_short"
        android:shortcutLongLabel="@string/shortcut_favorite_scenarios_long"
        android:shortcutDisabledMessage="@string/shortcut_favorite_scenarios_disabled">
        <intent
            android:action="com.buzbuz.smartautoclicker.action.START_FAVORITE_SCENARIO"
            android:targetClass="com.buzbuz.smartautoclicker.scenarios.favorite.FavoriteScenarioLauncherActivity" />
    </shortcut>

</shortcuts>
